Ver.1.4.5
---------
* plasmoid
    + add translation support to plugin part
    * more correct interface painting
    * more correct configuration interface painting
    * move plugin from private

Ver.1.4.4
---------
* dataengine
    - fix profile status definition

Ver.1.4.3
---------
* all
    - fix clang build (#41)
    - fix WPA_DRIVERS (#40)
* library
    - fix bug in WpaSup class with invalid returning value

***

Ver.1.4.2
---------
* gui
    * remove Update call to the helper

Ver.1.4.1
---------
* all
    + some Easter eggs
    + add _DEFAULT_SOURCE to avoid gcc warnings
    * refactoring
    * fix cppcheck warnings
    * update 3rdparty components
    * fix language defilition
    * replace General section to Common in settings (see http://doc.qt.io/qt-5/qsettings.html#Format-enum)
* gui
    + allow to change helper control group from UI (#36)
    + allow to open profile in an external editor (#38)
    + add IP validators (#34)
    + add toolbar configuration
    + add notification on hidding to tray
    + add returnPressed() signal to lineEdits
    + implement needToBeConfigured() signal
    - remove margins
    - fix bug with segfault on updating UI with KF5
    * rewrite ErrorWindow class
    * split MainWindow class
    * update WiFi menu to new library functions
    * improve UI (#25, #28)
    * more correct component checking (#29, #37)
    * more correct callbacks with exceptions
* dataengine
    + add desktop reconfiguration (#30)
    * improve performance
* helper
    + add /interface interface
    + add /ctrl/{CurrentWiFi,VerboseWiFi} calls
    + add /netctl/VerboseProfiles call
    + add /netctl/{netctlActiveProfile,netctlProfileList,netctlVerboseProfileList) calls
* library
    + add NetctlInterface class
    + add WpaSup::CurrentWiFi method
    + append structures some additional information
    + mark Netctl::getProfileDescription() as deprecated
    + now WpaSup can connect to already created session (by default)
    * improve performance