@@ -191,6 +191,66 @@
                </layout>
               </item>
               <item>
+               <layout class="QHBoxLayout" name="layout_mainAutoUpdate">
+                <item>
+                 <widget class="QLabel" name="label_mainAutoUpdate">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>1</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>Main tab autoupdate, sec</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QSpinBox" name="spinBox_mainAutoUpdate">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                    <horstretch>2</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="layout_wifiAutoUpdate">
+                <item>
+                 <widget class="QLabel" name="label_wifiAutoUpdate">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>1</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>WiFi tab autoupdate, sec</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QSpinBox" name="spinBox_wifiAutoUpdate">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                    <horstretch>2</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
                <layout class="QHBoxLayout" name="layout_enableTray">
                 <item>
                  <widget class="QLabel" name="label_enableTray">
@@ -642,8 +702,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>436</width>
-               <height>173</height>
+               <width>542</width>
+               <height>330</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -898,8 +958,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>436</width>
-               <height>45</height>
+               <width>542</width>
+               <height>330</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -983,8 +1043,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>239</width>
-               <height>194</height>
+               <width>542</width>
+               <height>330</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_10">
