@@ -6,6 +6,12 @@
 [Common]
 # application language
 LANGUAGE=en
+# auto update interval for main tab in seconds
+# 0 means there is no updates
+MAINUPDATE=0
+# auto update interval for wifi tab in seconds
+# 0 means there is no updates
+WIFIUPDATE=0
 # create system tray icon.
 # This option is not recognized by netctlgui-helper
 SYSTRAY=true
