@@ -48,6 +48,8 @@ service name. This option is not recognized by
 path to directory which contains interface information
 .IP "LANGUAGE=en"
 application language
+.IP "MAINUPDATE=0"
+main tab autoupdate interval in seconds. 0 is disable autoupdate
 .IP "NETCTL_PATH=/usr/bin/netctl"
 path to
 .BR netctl (1)
@@ -96,6 +98,8 @@ use
 .BR netctlgui-helper (1)
 if it is available. This option is not recognized by
 .BR netctlgui-helper (1)
+.IP "WIFIUPDATE=0"
+WiFi tab autoupdate interval in seconds. 0 is disable autoupdate
 .IP "WPACLI_PATH=/usr/bin/wpa_cli"
 path to
 .BR wpa_cli (8)
