@@ -14,7 +14,7 @@ X-Plasma-RemoteLocation=
 X-KDE-PluginInfo-Author=Evgeniy Alekseev
 X-KDE-PluginInfo-Email=esalexeev@gmail.com
 X-KDE-PluginInfo-Name=org.kde.plasma.netctl
-X-KDE-PluginInfo-Version=1.4.4
+X-KDE-PluginInfo-Version=1.4.5
 X-KDE-PluginInfo-Website=http://arcanis.name/projects/netctl-gui
 X-KDE-PluginInfo-Category=Network
 X-KDE-PluginInfo-Depends=
